# aiga-django-amqp

./: .gitignore  LICENSE  MANIFEST.in  README.rst  setup.cfg
aiga-django-amqp/: setup.cfg
aiga-django-amqp/aiga_amqp/: apps.py  core.py
aiga_amqp/: core.py
src/: Dockerfile  Pipfile  manage.py
src/__main/: asgi.py  settings.py  urls.py  wsgi.py
