[metadata]
name = aiga-django-amqp
version = 0.0.2
description = Django app yang digunakan untuk mempermudah penggunaan rabbit mq
long_description = file: README.rst
url = https://github.com/ariksubagia/aiga-django-amqp
author = I Putu Arik Subagia, S.kom
author_email = ariksubagia@ymail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 3.0
    Pika >= 1.2.1